@@ -1,3 +1,11 @@
+2019-06-22  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/tinytest/test_misc.R: Moved from tests/strings.R
+        * inst/tinytest/test_strings.R: Moved from tests/strings.R
+	* inst/tinytest/strings.toml: Moved from tests/tables.toml
+        * inst/tinytest/test_tables.R: Moved from tests/tables.R
+	* inst/tinytest/tables.toml: Moved from tests/tables.toml
+
 2019-06-21  Dirk Eddelbuettel  <edd@debian.org>
 
         * .travis.yml (install): Install tinytest
